tests/NormalTests/paczka1/fuzzy1/36349201.err
Error in line 3: loDtWB A629 79,6
Error in line 11: Ng7V1 A59& 92,&
Error in line 5: loDtWB A596 25,1
Error in line 23: SrK7qyv A465 35,7
